# polylineencoder

./: .travis.yml  CMakeLists.txt  LICENSE  README.md  appveyor.yml  codecov.yml  main.cpp  polylineencoder.cpp  polylineencoder.h
.github/workflows/: cmake.yml
src/: polylineencoder.cpp  polylineencoder.h
test/: CMakeLists.txt  main.cpp
